BW: corrected license-file name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "dice-bag"
 version = "0.1.0"
 edition = "2021"
 license = "LGPL-3.0-only"
-license-file = "LICENSE.txt"
+license-file = "LICENSE"
 homepage = "https://codeberg.org/brotherwolf/dice-bag"
 description = "This library uses standard RPG notation for generating dice rolls producing a total score, but also a break down of all the rolls should they be needed."
 repository = "https://codeberg.org/brotherwolf/dice-bag"
